<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="Игра"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/Game"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/text_color_edit_text"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/twoPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/singlePlayer"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onClickSinglePlayer"
        android:text="@string/single"
        app:layout_constraintBottom_toTopOf="@+id/multiPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/multiPlayer"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onClickMultiPlayer"
        android:text="@string/multiplayer"
        app:layout_constraintBottom_toTopOf="@+id/Bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlePlayer"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/twoPlayer"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/twoPlayer"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/threePlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/threePlayer"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/threePlayer"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/Bottom"
        app:layout_constraintEnd_toStartOf="@+id/fourPlayer"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twoPlayer"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/fourPlayer"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/fourPlayer"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/threePlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/threePlayer"
        app:layout_constraintTop_toTopOf="@+id/threePlayer"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>